--- a/styles/oldstles.css
+++ b/styles/oldstles.css
@@ -9,31 +9,7 @@
     transition: opacity .25s linear;
 }
 
-.buttonDivWrapper {
-    display: flex;
-    justify-content: space-between;
-    padding-bottom: 10px;
-}
-
-.nextButtonDiv, .previousButtonDiv {
-    display: inline-block;
-    width: 40%;
-}
-
-.nextButtonDiv img {
-    padding-left: 5px;
-    transform: rotate(90deg);
-}
-
-.previousButtonDiv img {
-    transform: rotate(270deg);
-}
-
-.modalDescriptionWrapper {
-    text-align: center;
-}
-
-.modalHeader, .aboutOverlay-header {
+.aboutOverlay-header {
     color: #e8535b;
     display: inline-block;
     font-size: 1.2em;
